# manim-play-timeline

./: .gitignore  README.md  demo.py  pyproject.toml
src/manim_play_timeline/: __init__.py
