[tool.poetry]
name = "manim-play-timeline"
version = "0.1.1"
description = "A manim plugin providing the function play_timeline to play sequences of independent animations in parallel"
license = "MIT"
authors = ["Abul4fia <abul4fia@gmail.com>"]
repository = "https://github.com/abul4fia/manim-play-timeline"
readme = "README.md"
classifiers= [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering",
    "Topic :: Multimedia :: Video",
    "Topic :: Multimedia :: Graphics",
    "Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
    "Natural Language :: English",
]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
manim = ">=0.17"

[tool.poetry.plugins."manim.plugins"]
"manim_play_timeline" = "manim_play_timeline"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"